objects/nFORCE__Screen__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Disable_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin manually populates this field. It controls whether export to PDF or the brower&apos;s print option is used. When enabled, export to PDF is used when printing a credit memo. When disabled, the browser&apos;s print is used when printing a credit memo. By default, this is disabled. It is recommended that this be enabled.</description>
        <label>Disable Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Show_Link_To_Context_Object__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. The default value is true. When the value is set to true, the credit memo will diplay a link to return to the context object.</description>
        <label>Show Context Object Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Screen</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Show_Link_To_Context_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>